{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 1086,
  "lineage": "0a5cae2d-a6d5-f6b9-65c5-52716f45a795",
  "resources": [
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "vbond_vpn512_int",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "availability_zone": "us-east-2b",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "vbond_vpn512_interface"
                ]
              }
            ],
            "id": "eni-081cc250f5dded548",
            "interface_type": "interface",
            "mac_address": "06:01:d8:04:df:02",
            "owner_id": "595923541764",
            "private_dns_name": "ip-10-1-2-134.us-east-2.compute.internal",
            "private_ip": "10.1.2.134",
            "private_ips": [
              "10.1.2.134"
            ],
            "requester_id": "AIDAYVP6PT4CALIKSWKPL",
            "security_groups": [
              "sg-0d32f31d10c13e65f"
            ],
            "subnet_id": "subnet-0bb9f5d32ad2a3430",
            "tags": {
              "Name": "vbond_vpn512_interface"
            },
            "vpc_id": "vpc-005213929956af353"
          },
          "depends_on": [
            "aws_network_interface.vbond_vpn512_int"
          ]
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "vedge01_vpn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "availability_zone": "us-east-2b",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "vedge01_vpn512_interface"
                ]
              }
            ],
            "id": "eni-0701ec9fa98c04a8a",
            "interface_type": "interface",
            "mac_address": "06:30:26:85:f3:36",
            "owner_id": "595923541764",
            "private_dns_name": "ip-10-1-2-142.us-east-2.compute.internal",
            "private_ip": "10.1.2.142",
            "private_ips": [
              "10.1.2.142"
            ],
            "requester_id": "AIDAYVP6PT4CALIKSWKPL",
            "security_groups": [
              "sg-0d32f31d10c13e65f"
            ],
            "subnet_id": "subnet-0bb9f5d32ad2a3430",
            "tags": {
              "Name": "vedge01_vpn512_interface"
            },
            "vpc_id": "vpc-005213929956af353"
          },
          "depends_on": [
            "aws_network_interface.vedge01_vpn512_int"
          ]
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "vedge02_vpn_512",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "availability_zone": "us-east-2b",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "vedge02_vpn512_interface"
                ]
              }
            ],
            "id": "eni-0364d7209af2e0825",
            "interface_type": "interface",
            "mac_address": "06:e7:dd:c8:22:d6",
            "owner_id": "595923541764",
            "private_dns_name": "ip-10-1-2-172.us-east-2.compute.internal",
            "private_ip": "10.1.2.172",
            "private_ips": [
              "10.1.2.172"
            ],
            "requester_id": "AIDAYVP6PT4CALIKSWKPL",
            "security_groups": [
              "sg-0d32f31d10c13e65f"
            ],
            "subnet_id": "subnet-0bb9f5d32ad2a3430",
            "tags": {
              "Name": "vedge02_vpn512_interface"
            },
            "vpc_id": "vpc-005213929956af353"
          },
          "depends_on": [
            "aws_network_interface.vedge02_vpn512_int"
          ]
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "vmanage_vpn512_int",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "availability_zone": "us-east-2b",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "vmanage_vpn512_interface"
                ]
              }
            ],
            "id": "eni-08bc005c6ff4231da",
            "interface_type": "interface",
            "mac_address": "06:c9:8d:99:13:64",
            "owner_id": "595923541764",
            "private_dns_name": "ip-10-1-2-213.us-east-2.compute.internal",
            "private_ip": "10.1.2.213",
            "private_ips": [
              "10.1.2.213"
            ],
            "requester_id": "AIDAYVP6PT4CALIKSWKPL",
            "security_groups": [
              "sg-0d32f31d10c13e65f"
            ],
            "subnet_id": "subnet-0bb9f5d32ad2a3430",
            "tags": {
              "Name": "vmanage_vpn512_interface"
            },
            "vpc_id": "vpc-005213929956af353"
          },
          "depends_on": [
            "aws_network_interface.vmanage_vpn512_int"
          ]
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "vsmart_vpn512_int",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "availability_zone": "us-east-2b",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "vsmart_vpn512_interface"
                ]
              }
            ],
            "id": "eni-02db85651b45300de",
            "interface_type": "interface",
            "mac_address": "06:1a:fa:da:ae:38",
            "owner_id": "595923541764",
            "private_dns_name": "ip-10-1-2-152.us-east-2.compute.internal",
            "private_ip": "10.1.2.152",
            "private_ips": [
              "10.1.2.152"
            ],
            "requester_id": "AIDAYVP6PT4CALIKSWKPL",
            "security_groups": [
              "sg-0d32f31d10c13e65f"
            ],
            "subnet_id": "subnet-0bb9f5d32ad2a3430",
            "tags": {
              "Name": "vsmart_vpn512_interface"
            },
            "vpc_id": "vpc-005213929956af353"
          },
          "depends_on": [
            "aws_network_interface.vsmart_vpn512_int"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "pub_sdwan_vbond",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a191a002c8d83305",
            "domain": "vpc",
            "id": "eipalloc-066fe074d932b7095",
            "network_interface": "eni-081cc250f5dded548",
            "private_dns": "ip-10-1-2-134.us-east-2.compute.internal",
            "private_ip": "10.1.2.134",
            "public_dns": "ec2-3-23-72-22.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.72.22",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_network_interface.vbond_vpn512_int"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "pub_sdwan_vedge01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-011a36064f629bd4b",
            "domain": "vpc",
            "id": "eipalloc-09a12c7981035b4de",
            "network_interface": "eni-0701ec9fa98c04a8a",
            "private_dns": "ip-10-1-2-142.us-east-2.compute.internal",
            "private_ip": "10.1.2.142",
            "public_dns": "ec2-3-23-148-242.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.148.242",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_network_interface.vedge01_vpn512_int"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "pub_sdwan_vedge02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0edc8b35b2062fd3b",
            "domain": "vpc",
            "id": "eipalloc-038458eb0f641996b",
            "network_interface": "eni-0364d7209af2e0825",
            "private_dns": "ip-10-1-2-172.us-east-2.compute.internal",
            "private_ip": "10.1.2.172",
            "public_dns": "ec2-3-137-6-63.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.6.63",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_network_interface.vedge02_vpn512_int"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "pub_sdwan_vmanage",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07a161d599ceab38d",
            "domain": "vpc",
            "id": "eipalloc-0bf74b2b6e9067279",
            "network_interface": "eni-08bc005c6ff4231da",
            "private_dns": "ip-10-1-2-213.us-east-2.compute.internal",
            "private_ip": "10.1.2.213",
            "public_dns": "ec2-18-217-243-200.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.243.200",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_network_interface.vmanage_vpn512_int"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "pub_sdwan_vsmart",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-00094fe51fe2a967a",
            "domain": "vpc",
            "id": "eipalloc-0fe854058962ffc22",
            "network_interface": "eni-02db85651b45300de",
            "private_dns": "ip-10-1-2-152.us-east-2.compute.internal",
            "private_ip": "10.1.2.152",
            "public_dns": "ec2-3-22-54-89.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.54.89",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_network_interface.vsmart_vpn512_int"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vbond",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb64133583e2f1bc",
            "arn": "arn:aws:ec2:us-east-2:595923541764:instance/i-01dc4080bfda9210f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01dc4080bfda9210f",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "hfy-macpro-east2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-081cc250f5dded548"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-0e1bccaca1a543921"
              }
            ],
            "primary_network_interface_id": "eni-081cc250f5dded548",
            "private_dns": "ip-10-1-2-134.us-east-2.compute.internal",
            "private_ip": "10.1.2.134",
            "public_dns": "ec2-3-23-72-22.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.72.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0005ee10171c7d25b",
                "volume_size": 11,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb9f5d32ad2a3430",
            "tags": {
              "Name": "vBond01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d32f31d10c13e65f"
            ]
          },
          "depends_on": [
            "aws_network_interface.vbond_sen_int",
            "aws_network_interface.vbond_vpn512_int"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vedge01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb64133583e2f1bc",
            "arn": "arn:aws:ec2:us-east-2:595923541764:instance/i-01ae3514829eeb8fa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01ae3514829eeb8fa",
            "instance_state": "running",
            "instance_type": "m4.xlarge",
            "ipv6_address_count": 0,
            "key_name": "hfy-macpro-east2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0701ec9fa98c04a8a"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-05a1d7a08206c459f"
              },
              {
                "delete_on_termination": false,
                "device_index": 2,
                "network_interface_id": "eni-02c45cbc84ad3789b"
              },
              {
                "delete_on_termination": false,
                "device_index": 3,
                "network_interface_id": "eni-05ca359df95ce5a61"
              }
            ],
            "primary_network_interface_id": "eni-0701ec9fa98c04a8a",
            "private_dns": "ip-10-1-2-142.us-east-2.compute.internal",
            "private_ip": "10.1.2.142",
            "public_dns": "ec2-3-23-148-242.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.148.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08562240bf3f1fb89",
                "volume_size": 11,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb9f5d32ad2a3430",
            "tags": {
              "Name": "vEdge01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d32f31d10c13e65f"
            ]
          },
          "depends_on": [
            "aws_network_interface.vedge01_vpn0_isp1_int",
            "aws_network_interface.vedge01_vpn0_isp2_int",
            "aws_network_interface.vedge01_vpn1_int",
            "aws_network_interface.vedge01_vpn512_int"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vedge02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb64133583e2f1bc",
            "arn": "arn:aws:ec2:us-east-2:595923541764:instance/i-0f43154ef24a8e534",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f43154ef24a8e534",
            "instance_state": "running",
            "instance_type": "m4.xlarge",
            "ipv6_address_count": 0,
            "key_name": "hfy-macpro-east2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0364d7209af2e0825"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-0fc55c9685342c81b"
              },
              {
                "delete_on_termination": false,
                "device_index": 2,
                "network_interface_id": "eni-0f7e0cac5e307ff56"
              },
              {
                "delete_on_termination": false,
                "device_index": 3,
                "network_interface_id": "eni-054bb27255dbdb81f"
              }
            ],
            "primary_network_interface_id": "eni-0364d7209af2e0825",
            "private_dns": "ip-10-1-2-172.us-east-2.compute.internal",
            "private_ip": "10.1.2.172",
            "public_dns": "ec2-3-137-6-63.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.6.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00562396e23ac5518",
                "volume_size": 11,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb9f5d32ad2a3430",
            "tags": {
              "Name": "vEdge02"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d32f31d10c13e65f"
            ]
          },
          "depends_on": [
            "aws_network_interface.vedge02_vpn0_isp1_int",
            "aws_network_interface.vedge02_vpn0_isp2_int",
            "aws_network_interface.vedge02_vpn1_int",
            "aws_network_interface.vedge02_vpn512_int"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vmanage",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01707a27d923d5894",
            "arn": "arn:aws:ec2:us-east-2:595923541764:instance/i-090a6c85277a9ce8f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0defa31cc7f84538d",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-090a6c85277a9ce8f",
            "instance_state": "running",
            "instance_type": "m4.xlarge",
            "ipv6_address_count": 0,
            "key_name": "hfy-macpro-east2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-08bc005c6ff4231da"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-0c87e404c378eb7bb"
              }
            ],
            "primary_network_interface_id": "eni-08bc005c6ff4231da",
            "private_dns": "ip-10-1-2-213.us-east-2.compute.internal",
            "private_ip": "10.1.2.213",
            "public_dns": "ec2-18-217-243-200.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.243.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-092e533469d8325bd",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb9f5d32ad2a3430",
            "tags": {
              "Name": "vManage"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "20m"
            },
            "vpc_security_group_ids": [
              "sg-0d32f31d10c13e65f"
            ]
          },
          "depends_on": [
            "aws_eip.pub_sdwan_vmanage",
            "aws_network_interface.vmanage_sen_int",
            "aws_network_interface.vmanage_vpn512_int"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vsmart",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e6e57e593846d913",
            "arn": "arn:aws:ec2:us-east-2:595923541764:instance/i-0a6b7aa4c557488d4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a6b7aa4c557488d4",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "hfy-macpro-east2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-02db85651b45300de"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-04784c12f19d80e94"
              }
            ],
            "primary_network_interface_id": "eni-02db85651b45300de",
            "private_dns": "ip-10-1-2-152.us-east-2.compute.internal",
            "private_ip": "10.1.2.152",
            "public_dns": "ec2-3-22-54-89.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.54.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0336b341e0d0bee28",
                "volume_size": 11,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb9f5d32ad2a3430",
            "tags": {
              "Name": "vSmart"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d32f31d10c13e65f"
            ]
          },
          "depends_on": [
            "aws_network_interface.vsmart_sen_int",
            "aws_network_interface.vsmart_vpn512_int"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0499ca534c84db161",
            "owner_id": "595923541764",
            "tags": {
              "Name": "sdwan_lab_aws-igw"
            },
            "vpc_id": "vpc-005213929956af353"
          },
          "depends_on": [
            "aws_vpc.sdwan_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "vbond_sen_int",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0e1bccaca1a543921",
            "mac_address": "06:61:83:78:c6:4e",
            "private_dns_name": "ip-10-1-4-69.us-east-2.compute.internal",
            "private_ip": "10.1.4.69",
            "private_ips": [
              "10.1.4.69"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d32f31d10c13e65f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cea5115ffc75c7be",
            "tags": {
              "Name": "vbond_sen_interface"
            }
          },
          "depends_on": [
            "aws_security_group.sdwan-cisco-ips-sg",
            "aws_subnet.subnet_sen_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "vbond_vpn512_int",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-081cc250f5dded548",
            "mac_address": "06:01:d8:04:df:02",
            "private_dns_name": "ip-10-1-2-134.us-east-2.compute.internal",
            "private_ip": "10.1.2.134",
            "private_ips": [
              "10.1.2.134"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d32f31d10c13e65f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb9f5d32ad2a3430",
            "tags": {
              "Name": "vbond_vpn512_interface"
            }
          },
          "depends_on": [
            "aws_security_group.sdwan-cisco-ips-sg",
            "aws_subnet.subnet_vpn_512"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "vedge01_vpn0_isp1_int",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-05a1d7a08206c459f",
            "mac_address": "06:56:90:b5:b0:10",
            "private_dns_name": "ip-10-1-0-7.us-east-2.compute.internal",
            "private_ip": "10.1.0.7",
            "private_ips": [
              "10.1.0.7"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d32f31d10c13e65f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0531252047170ae93",
            "tags": {
              "Name": "vedge01_vpn0_isp_1_interface"
            }
          },
          "depends_on": [
            "aws_security_group.sdwan-cisco-ips-sg",
            "aws_subnet.subnet_vpn_0_isp_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "vedge01_vpn0_isp2_int",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-02c45cbc84ad3789b",
            "mac_address": "06:75:c5:a6:f1:94",
            "private_dns_name": "ip-10-1-0-197.us-east-2.compute.internal",
            "private_ip": "10.1.0.197",
            "private_ips": [
              "10.1.0.197"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d32f31d10c13e65f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0531252047170ae93",
            "tags": {
              "Name": "vedge01_vpn0_isp_2_interface"
            }
          },
          "depends_on": [
            "aws_security_group.sdwan-cisco-ips-sg",
            "aws_subnet.subnet_vpn_0_isp_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "vedge01_vpn1_int",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-05ca359df95ce5a61",
            "mac_address": "06:a5:0a:d0:80:f0",
            "private_dns_name": "ip-10-1-3-242.us-east-2.compute.internal",
            "private_ip": "10.1.3.242",
            "private_ips": [
              "10.1.3.242"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d32f31d10c13e65f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04fe210d906b2076a",
            "tags": {
              "Name": "vedge01_vpn1_interface"
            }
          },
          "depends_on": [
            "aws_security_group.sdwan-cisco-ips-sg",
            "aws_subnet.subnet_vpn_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "vedge01_vpn512_int",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0701ec9fa98c04a8a",
            "mac_address": "06:30:26:85:f3:36",
            "private_dns_name": "ip-10-1-2-142.us-east-2.compute.internal",
            "private_ip": "10.1.2.142",
            "private_ips": [
              "10.1.2.142"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d32f31d10c13e65f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb9f5d32ad2a3430",
            "tags": {
              "Name": "vedge01_vpn512_interface"
            }
          },
          "depends_on": [
            "aws_security_group.sdwan-cisco-ips-sg",
            "aws_subnet.subnet_vpn_512"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "vedge02_vpn0_isp1_int",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0fc55c9685342c81b",
            "mac_address": "06:60:be:37:8f:fe",
            "private_dns_name": "ip-10-1-0-223.us-east-2.compute.internal",
            "private_ip": "10.1.0.223",
            "private_ips": [
              "10.1.0.223"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d32f31d10c13e65f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0531252047170ae93",
            "tags": {
              "Name": "vedge02_vpn0_isp_1_interface"
            }
          },
          "depends_on": [
            "aws_security_group.sdwan-cisco-ips-sg",
            "aws_subnet.subnet_vpn_0_isp_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "vedge02_vpn0_isp2_int",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0f7e0cac5e307ff56",
            "mac_address": "06:2e:d4:9a:e8:a0",
            "private_dns_name": "ip-10-1-0-148.us-east-2.compute.internal",
            "private_ip": "10.1.0.148",
            "private_ips": [
              "10.1.0.148"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d32f31d10c13e65f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0531252047170ae93",
            "tags": {
              "Name": "vedge02_vpn0_isp_2_interface"
            }
          },
          "depends_on": [
            "aws_security_group.sdwan-cisco-ips-sg",
            "aws_subnet.subnet_vpn_0_isp_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "vedge02_vpn1_int",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-054bb27255dbdb81f",
            "mac_address": "06:4f:7d:24:59:ee",
            "private_dns_name": "ip-10-1-3-102.us-east-2.compute.internal",
            "private_ip": "10.1.3.102",
            "private_ips": [
              "10.1.3.102"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d32f31d10c13e65f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04fe210d906b2076a",
            "tags": {
              "Name": "vedge02_vpn1_interface"
            }
          },
          "depends_on": [
            "aws_security_group.sdwan-cisco-ips-sg",
            "aws_subnet.subnet_vpn_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "vedge02_vpn512_int",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0364d7209af2e0825",
            "mac_address": "06:e7:dd:c8:22:d6",
            "private_dns_name": "ip-10-1-2-172.us-east-2.compute.internal",
            "private_ip": "10.1.2.172",
            "private_ips": [
              "10.1.2.172"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d32f31d10c13e65f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb9f5d32ad2a3430",
            "tags": {
              "Name": "vedge02_vpn512_interface"
            }
          },
          "depends_on": [
            "aws_security_group.sdwan-cisco-ips-sg",
            "aws_subnet.subnet_vpn_512"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "vmanage_sen_int",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0c87e404c378eb7bb",
            "mac_address": "06:72:d4:23:bb:86",
            "private_dns_name": "ip-10-1-4-97.us-east-2.compute.internal",
            "private_ip": "10.1.4.97",
            "private_ips": [
              "10.1.4.97"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d32f31d10c13e65f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cea5115ffc75c7be",
            "tags": {
              "Name": "vmanage_sen_interface"
            }
          },
          "depends_on": [
            "aws_security_group.sdwan-cisco-ips-sg",
            "aws_subnet.subnet_sen_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "vmanage_vpn512_int",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-08bc005c6ff4231da",
            "mac_address": "06:c9:8d:99:13:64",
            "private_dns_name": "ip-10-1-2-213.us-east-2.compute.internal",
            "private_ip": "10.1.2.213",
            "private_ips": [
              "10.1.2.213"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d32f31d10c13e65f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb9f5d32ad2a3430",
            "tags": {
              "Name": "vmanage_vpn512_interface"
            }
          },
          "depends_on": [
            "aws_security_group.sdwan-cisco-ips-sg",
            "aws_subnet.subnet_vpn_512"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "vsmart_sen_int",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-04784c12f19d80e94",
            "mac_address": "06:fe:12:6f:2d:a4",
            "private_dns_name": "ip-10-1-4-44.us-east-2.compute.internal",
            "private_ip": "10.1.4.44",
            "private_ips": [
              "10.1.4.44"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d32f31d10c13e65f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cea5115ffc75c7be",
            "tags": {
              "Name": "vsmart_sen_interface"
            }
          },
          "depends_on": [
            "aws_security_group.sdwan-cisco-ips-sg",
            "aws_subnet.subnet_sen_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "vsmart_vpn512_int",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-02db85651b45300de",
            "mac_address": "06:1a:fa:da:ae:38",
            "private_dns_name": "ip-10-1-2-152.us-east-2.compute.internal",
            "private_ip": "10.1.2.152",
            "private_ips": [
              "10.1.2.152"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d32f31d10c13e65f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb9f5d32ad2a3430",
            "tags": {
              "Name": "vsmart_vpn512_interface"
            }
          },
          "depends_on": [
            "aws_security_group.sdwan-cisco-ips-sg",
            "aws_subnet.subnet_vpn_512"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0905088ab7613157e",
            "owner_id": "595923541764",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0499ca534c84db161",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sdwan_lab_aws-rtb"
            },
            "vpc_id": "vpc-005213929956af353"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.sdwan_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-sen",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd828162d1d18eb9",
            "route_table_id": "rtb-0905088ab7613157e",
            "subnet_id": "subnet-0cea5115ffc75c7be"
          },
          "depends_on": [
            "aws_route_table.rtb",
            "aws_subnet.subnet_sen_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-vpn0-isp1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c152d47efeca7071",
            "route_table_id": "rtb-0905088ab7613157e",
            "subnet_id": "subnet-0531252047170ae93"
          },
          "depends_on": [
            "aws_route_table.rtb",
            "aws_subnet.subnet_vpn_0_isp_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-vpn0-isp2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084e5b72c6233f200",
            "route_table_id": "rtb-0905088ab7613157e",
            "subnet_id": "subnet-0b0b645119d1737d9"
          },
          "depends_on": [
            "aws_route_table.rtb",
            "aws_subnet.subnet_vpn_0_isp_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-vpn1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c72b3fb5df8894b4",
            "route_table_id": "rtb-0905088ab7613157e",
            "subnet_id": "subnet-04fe210d906b2076a"
          },
          "depends_on": [
            "aws_route_table.rtb",
            "aws_subnet.subnet_vpn_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-vpn512",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fc477b11497995f",
            "route_table_id": "rtb-0905088ab7613157e",
            "subnet_id": "subnet-0bb9f5d32ad2a3430"
          },
          "depends_on": [
            "aws_route_table.rtb",
            "aws_subnet.subnet_vpn_512"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sdwan-cisco-ips-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:595923541764:security-group/sg-0d32f31d10c13e65f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d32f31d10c13e65f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "173.36.0.0/14"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "173.36.0.0/14"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "173.36.0.0/14"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "sdwan_lab_sg",
            "name_prefix": null,
            "owner_id": "595923541764",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sdwan_lab_aws-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-005213929956af353"
          },
          "depends_on": [
            "aws_vpc.sdwan_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_sen_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:595923541764:subnet/subnet-0cea5115ffc75c7be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-0cea5115ffc75c7be",
            "map_public_ip_on_launch": false,
            "owner_id": "595923541764",
            "vpc_id": "vpc-005213929956af353"
          },
          "depends_on": [
            "aws_vpc.sdwan_lab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_vpn_0_isp_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:595923541764:subnet/subnet-0531252047170ae93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0531252047170ae93",
            "map_public_ip_on_launch": false,
            "owner_id": "595923541764",
            "vpc_id": "vpc-005213929956af353"
          },
          "depends_on": [
            "aws_vpc.sdwan_lab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_vpn_0_isp_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:595923541764:subnet/subnet-0b0b645119d1737d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0b0b645119d1737d9",
            "map_public_ip_on_launch": false,
            "owner_id": "595923541764",
            "vpc_id": "vpc-005213929956af353"
          },
          "depends_on": [
            "aws_vpc.sdwan_lab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_vpn_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:595923541764:subnet/subnet-04fe210d906b2076a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-04fe210d906b2076a",
            "map_public_ip_on_launch": false,
            "owner_id": "595923541764",
            "vpc_id": "vpc-005213929956af353"
          },
          "depends_on": [
            "aws_vpc.sdwan_lab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_vpn_512",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:595923541764:subnet/subnet-0bb9f5d32ad2a3430",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0bb9f5d32ad2a3430",
            "map_public_ip_on_launch": true,
            "owner_id": "595923541764",
            "vpc_id": "vpc-005213929956af353"
          },
          "depends_on": [
            "aws_vpc.sdwan_lab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sdwan_lab",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:595923541764:vpc/vpc-005213929956af353",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0d1f68d21f4b9aa21",
            "default_route_table_id": "rtb-0bb745df830a077fa",
            "default_security_group_id": "sg-0b961c1dd586714fa",
            "dhcp_options_id": "dopt-8d12e7e4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-005213929956af353",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bb745df830a077fa",
            "owner_id": "595923541764",
            "tags": {
              "Name": "sdwan_lab_aws-vpc"
            }
          }
        }
      ]
    }
  ]
}